--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -3,6 +3,9 @@
 {% block title %}Glavnaya stranica{% endblock %}
 
 {% block content %}
-	<h1>Glavnaya stranica</h1>
-	<p>Glavnaya stranica</p>
+	<div class="features">
+		<h1>Glavnaya stranica</h1>
+		<p>Соображения высшего порядка, а также консультация с профессионалами из IT требует определения и уточнения ключевых компонентов планируемого обновления.</p>
+		<button class="btn btn-warning">Na stranicu pro nas</button>
+	</div>
 {% endblock %}
