--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -3,6 +3,9 @@
 {% block title %}Pro nas{% endblock %}
 
 {% block content %}
-	<h1>Pro nas</h1>
-	<p>Pro nas</p>
+	<div class="features">
+		<h1>Pro nas</h1>
+		<p>Соображения высшего порядка, а также консультация с профессионалами из IT требует определения и уточнения ключевых компонентов планируемого обновления..</p>
+		<button class="btn btn-danger">Prosto najmi</button>
+	</div>
 {% endblock %}
