--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -1,11 +1,26 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
 	<title>{% block title %}{% endblock %}</title>
+	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="{% static 'main/css/main.css' %}">
+	<link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 </head>
 <body>
-	{% block content %}
-
-	{% endblock %}
+	<aside>
+		<img src="{% static 'main/img/logo_simple.svg' %}" alt="Logo">
+		<span class="logo">itProger</span>
+		<h3>Navigaciya</h3>
+		<ul>
+			<a href="{% url 'home' %}"><li><i class="fas fa-home"></i> Glavnaya</li></a>
+			<a href="{% url 'about' %}"><li><i class="fas fa-address-card"></i> Pro nas</li></a>
+			<a href=""><li><i class="fas fa-paper-plane"></i> Kontaktu</li></a>
+		</ul>
+	</aside>
+	<main>
+		{% block content %}
+		{% endblock %}
+	</main>
 </body>
 </html>
