--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -5,7 +5,7 @@
 {% block content %}
 	<div class="features">
 		<h1>Pro nas</h1>
-		<p>Соображения высшего порядка, а также консультация с профессионалами из IT требует определения и уточнения ключевых компонентов планируемого обновления..</p>
+		<p>Соображения высшего порядка, а также консультация с профессионалами из IT требует определения и уточнения ключевых компонентов планируемого обновления.</p>
 		<button class="btn btn-danger">Prosto najmi</button>
 	</div>
 {% endblock %}
