--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,10 +1,10 @@
 {% extends 'main/layout.html' %}
 
-{% block title %}Glavnaya stranica{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 
 {% block content %}
 	<div class="features">
-		<h1>Glavnaya stranica</h1>
+		<h1>{{ title }}</h1>
 		<p>Соображения высшего порядка, а также консультация с профессионалами из IT требует определения и уточнения ключевых компонентов планируемого обновления.</p>
 		<button class="btn btn-warning">Na stranicu pro nas</button>
 	</div>
