--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -15,6 +15,7 @@
 		<ul>
 			<a href="{% url 'home' %}"><li><i class="fas fa-home"></i> Glavnaya</li></a>
 			<a href="{% url 'about' %}"><li><i class="fas fa-address-card"></i> Pro nas</li></a>
+			<a href="{% url 'news_home' %}"><li><i class="fas fa-newspaper"></i> Novosti</li></a>
 			<a href=""><li><i class="fas fa-paper-plane"></i> Kontaktu</li></a>
 		</ul>
 	</aside>
