--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -13,10 +13,11 @@
 		<span class="logo">itProger</span>
 		<h3>Navigaciya</h3>
 		<ul>
-			<a href="{% url 'home' %}"><li><i class="fas fa-home"></i> Glavnaya</li></a>
-			<a href="{% url 'about' %}"><li><i class="fas fa-address-card"></i> Pro nas</li></a>
-			<a href="{% url 'news_home' %}"><li><i class="fas fa-newspaper"></i> Novosti</li></a>
-			<a href=""><li><i class="fas fa-paper-plane"></i> Kontaktu</li></a>
+			<a href="{% url 'home' %}"><li><i class="fas fa-home"></i> Главная</li></a>
+			<a href="{% url 'about' %}"><li><i class="fas fa-address-card"></i> Про нас</li></a>
+			<a href="{% url 'news_home' %}"><li><i class="fas fa-newspaper"></i> Новости</li></a>
+			<a href=""><li><i class="fas fa-paper-plane"></i> Контацты</li></a>
+			<a href="{% url 'create' %}"><li><button class="btn btn-info"><i class="fas fa-plus-circle"></i> Добавить запись</button></li></a>
 		</ul>
 	</aside>
 	<main>
