--- a/news/templates/news/news_home.html
+++ b/news/templates/news/news_home.html
@@ -5,7 +5,15 @@
 {% block content %}
 	<div class="features">
 		<h1>Novosti na saite</h1>
-		<p>Соображения высшего порядка, а также консультация с профессионалами из IT требует определения и уточнения ключевых компонентов планируемого обновления.</p>
-		<button class="btn btn-warning">Na stranicu pro nas</button>
+		{% if news %}
+			{% for el in news %}
+				<div class="alert alert-warning">
+					<h3>{{ el.title }}</h3>
+					<p>{{ el.anons }}</p>
+				</div>
+			{% endfor %}
+		{% else %}
+			<p>У вас нет записей</p>
+		{% endif %}
 	</div>
 {% endblock %}
